--- a/src/components/navigation/navigation.scss
+++ b/src/components/navigation/navigation.scss
@@ -3,8 +3,15 @@
   height: 100vh;
   position: fixed;
   transform: translateX(calc(-100vw + 50px));
+  overflow-y: scroll;
   z-index: 1;
   transition: 0.5s transform ease-in-out;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
 
   &.open {
     transform: translateX(0);
@@ -20,7 +27,6 @@
   }
 
   .navigation {
-    height: 100%;
     position: relative;
     width: 100%;
   }
@@ -34,6 +40,12 @@
     border: none;
     background-color: transparent;
     cursor: pointer;
+    outline: none;
+
+    :hover {
+      transform: scale(1.1);
+      transform-origin: center;
+    }
 
     .icon {
       width: 90%;
@@ -50,7 +62,6 @@
   .link {
     display: inline;
     font-size: 80px;
-    margin-bottom: 30px;
     text-decoration: none;
     border-radius: 100px;
     border: 10px solid;
@@ -59,5 +70,9 @@
     font-weight: 600;
     letter-spacing: 10px;
     opacity: 1;
+
+    &:not(:last-of-type) {
+      margin-bottom: 30px;
+    }
   }
 }
