--- a/src/components/navigation/navigation.scss
+++ b/src/components/navigation/navigation.scss
@@ -2,8 +2,8 @@
   width: 100vw;
   height: 100vh;
   position: fixed;
+  overflow-y: hidden;
   transform: translateX(calc(-100vw + 50px));
-  overflow-y: scroll;
   z-index: 1;
   transition: 0.5s transform ease-in-out;
   -ms-overflow-style: none; /* IE and Edge */
@@ -15,6 +15,7 @@
 
   &.open {
     transform: translateX(0);
+    overflow-y: scroll;
   }
 
   .background {
@@ -24,6 +25,10 @@
     background-color: white;
     opacity: 0.8;
     z-index: -1;
+
+    @include bp("tablet") {
+      height: 100vh;
+    }
   }
 
   .navigation {
@@ -57,6 +62,10 @@
     display: flex;
     flex-direction: column;
     padding: 40px;
+
+    @include bp("tablet") {
+      padding: 20px;
+    }
   }
 
   .link {
@@ -73,6 +82,13 @@
 
     &:not(:last-of-type) {
       margin-bottom: 30px;
+    }
+
+    @include bp("tablet") {
+      font-size: 35px;
+      padding: 15px;
+      letter-spacing: 5px;
+      border-width: 5px;
     }
   }
 }
