--- a/src/index.scss
+++ b/src/index.scss
@@ -20,13 +20,13 @@ body {
   background: $background;
   color: #606063;
   margin: 0;
-  overflow: hidden;
+  // overflow: hidden;
   padding: 0;
 }
 
 #root {
   height: 100vh;
-  overflow: hidden;
+  // overflow: hidden;
   width: 100vw;
 
   --white: #{$white};
@@ -37,7 +37,7 @@ body {
 
 * {
   box-sizing: border-box;
-  font-family: "Lato", "sans-serif";
+  font-family: "Font", "sans-serif";
   font-weight: 300;
   letter-spacing: 0.2px;
 }
@@ -119,6 +119,11 @@ a.inline-link {
   position: fixed;
   left: 4px;
   bottom: 0;
+}
+
+@font-face {
+  font-family: "Font";
+  src: local("Font"), url(./assets/CothamSans.otf) format("opentype");
 }
 
 // Mixins
