--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -13,24 +13,284 @@
     }
   }
 
-  .manifesto-container {
-    background-color: $lilac-fill;
-    border: 2px solid $lilac-stroke;
-    box-shadow: 0 0 8px $lilac-stroke;
-    border-radius: 20px;
-    padding: 16px;
-    text-align: center;
-    max-width: 75%;
-    margin-top: 100px;
-    margin-bottom: 200px;
+  .header-container {
+    align-items: center;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin-bottom: 100px;
 
     @include bp("tablet") {
-      margin-top: 20px;
-      max-width: 90%;
+      margin-bottom: 50px;
     }
 
+    .logo {
+      margin-top: 5%;
+      width: 50%;
+      z-index: 1;
+    }
+
+    .spiral {
+      position: absolute;
+      width: 100%;
+    }
+  }
+
+  .staggered-1 {
+    margin-bottom: 50px;
+
+    .a {
+      transform: translateX(-100px);
+
+      @include bp("tablet") {
+        transform: translateX(-0px);
+      }
+    }
+
+    .b {
+      margin-top: 15px;
+      transform: translateX(100px);
+
+      @include bp("tablet") {
+        transform: translateX(-0px);
+      }
+    }
+  }
+
+  .staggered-2 {
+    margin-bottom: 50px;
+
+    .a {
+      transform: translateX(-50px);
+
+      @include bp("tablet") {
+        transform: translateX(-0px);
+      }
+    }
+
+    .b {
+      margin-top: 15px;
+      transform: translateX(100px);
+
+      @include bp("tablet") {
+        transform: translateX(-0px);
+      }
+    }
+
+    .highlight-1 {
+      border: 3px solid #f8ad85;
+      border-radius: 10px;
+      font-weight: bold;
+      padding: 10px;
+    }
+
+    .highlight-2 {
+      border: 3px solid #fff02a;
+      border-radius: 10px;
+      font-weight: bold;
+      padding: 10px;
+    }
+  }
+  .staggered-3 {
+    margin-top: 25px;
+    display: flex;
+    justify-content: space-around;
+    width: 50%;
+    border-radius: 20px;
+    border: 3px solid;
+    padding: 20px;
+
+    @include bp("tablet") {
+      width: 80%;
+    }
+
+    .a,
+    .c {
+      transform: translateY(-10px);
+    }
+
+    .b,
+    .d {
+      transform: translateY(10px);
+    }
+  }
+
+  .pink {
+    color: $accent;
+  }
+
+  .staggered-4 {
+    display: flex;
+    margin-top: 100px;
+
+    @include bp("tablet") {
+      align-items: center;
+      flex-direction: column;
+    }
+
+    .vertical-text {
+      display: flex;
+
+      @include bp("tablet") {
+        width: 100%;
+      }
+
+      .column {
+        width: 50px;
+      }
+
+      .title {
+        font-size: 60px;
+        margin-bottom: -12px;
+      }
+
+      .vertical {
+        font-size: 20px;
+        writing-mode: vertical-rl;
+        text-orientation: upright;
+      }
+    }
+
+    .a {
+      font-size: 48px;
+    }
+
+    .r {
+      margin-left: 50px;
+    }
+
+    .c {
+      transform: translateX(50px);
+
+      @include bp("tablet") {
+        transform: translateX(20px);
+      }
+    }
+
+    .d {
+      transform: translateX(100px);
+
+      @include bp("tablet") {
+        transform: translateX(40px);
+      }
+    }
+
+    .e {
+      @include bp("tablet") {
+        transform: translateX(60px);
+      }
+    }
+  }
+
+  .staggered-5 {
+    margin-top: 50px;
+    width: 50%;
+
+    @include bp("tablet") {
+      width: 90%;
+    }
+
+    .row-1 {
+      display: flex;
+      justify-content: space-between;
+
+      .b,
+      .d {
+        transform: translateY(10px);
+      }
+
+      .e {
+        transform: translateY(-5px);
+      }
+    }
+
+    .row-2 {
+      display: flex;
+      margin-top: 20px;
+      justify-content: space-between;
+
+      .b {
+        transform: translateY(-1px);
+      }
+
+      .c {
+        transform: translateY(20px);
+      }
+    }
+  }
+
+  .cta-container {
+    margin-top: 70px;
+
+    .cta {
+      border-radius: 30px;
+      background-color: #ffe6f9;
+      border: 5px solid #ffb4ee;
+      padding: 20px;
+      font-size: 50px;
+    }
+  }
+
+  .staggered-6 {
+    display: flex;
+    justify-content: center;
+    margin-top: -20px;
+    width: 50%;
+
+    @include bp("tablet") {
+      width: 80%;
+    }
+
+    .l {
+      transform: translateY(25px);
+      width: 200px;
+    }
+
+    .r {
+      border: 5px solid #ffbfa7;
+      border-radius: 20px;
+      padding: 20px;
+      text-align: center;
+      width: 480px;
+    }
+  }
+
+  .info {
+    margin-top: 40px;
+
     p {
-      margin-bottom: 12px;
+      text-align: center;
+    }
+  }
+
+  .footer {
+    margin-top: 50px;
+    margin-bottom: 20px;
+
+    .link {
+      color: $grey-900;
+    }
+
+    .icons {
+      display: flex;
+      justify-content: center;
+
+      .icon-button {
+        align-items: center;
+        background-color: transparent;
+        border: none;
+        cursor: pointer;
+
+        display: flex;
+        height: 40px;
+        justify-content: center;
+        width: 40px;
+        img {
+          height: 30px;
+          width: 30px;
+        }
+      }
     }
   }
 }
